no need to use staticmethod, add more file to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@
 # Ignore pycache files
 __pycache__
 .pytest_cache
+
+# Ignore test result files
+/test_report.html
+
+# Ignore generated css files
+assets
